--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -13,21 +13,16 @@
               </div>
               <ul>
                 <div class="dropdown">
-                  <button class="dropbtn">REQUEST</button>
+                  <button class="dropbtn">SIGN IN</button>
                   <div class="dropdown-content">
                     <a class="nav-link active" id="ModalExample" (click)="openForm()">Log Complaint</a>
+                    <a class="nav-link active" id="ModalExample" (click)="openLogin()">ADMIN</a>
+                    <a class="nav-link active" id="ModalExample" (click)="openHOD()">HOD</a>
+                    <a class="nav-link active" id="ModalExample" (click)="openTech()">TECHNICIAN</a>
+                    <!-- <a class="nav-link active" id="ModalExample" (click)="openTech()">SCAN QR CODE</a> -->
+                   
                   </div>
                 </div>
-                  <li>
-                      <a class="nav-link active" id="ModalExample" (click)="openLogin()">ADMIN</a>
-                  </li>
-                  <li>
-                    <a class="nav-link active" id="ModalExample" (click)="openHOD()">HOD</a>
-                </li>
-                  <li>
-                    <a class="nav-link active" id="ModalExample" (click)="openTech()">TECHNICIAN</a>
-                  </li>
-                  
               </ul>
       
           </nav>
@@ -45,7 +40,7 @@
    
 <div id="banner">
     <h1>Technical Services</h1>
-    <h3>We Can Help You Fix All Of Your Technical Problems</h3>
+    <h3>Building the Future with Tech, for more Possibilities</h3>
 </div> 
     <section id="about">
       <div id="about-text">
@@ -59,7 +54,7 @@
           Regardless of of such, they are innefective. The Technical Services System aims to improve/help employees in an orgarnisation solve
         technical difficulties effectively. Thus improving productivity in orgarnisations.</p>
       </div> 
-      <div class="about-img"><img src="../../../assets/images/footer.png"  style="height: 500px;width: 400px;"></div>
+     <!-- <div class="about-img"><img src="../../../assets/images/footer.png"  style="height: 500px;width: 400px;"></div>-->
     </section>
     
     
