--- a/src/app/techpage/techpage.component.html
+++ b/src/app/techpage/techpage.component.html
@@ -10,8 +10,15 @@
             <div id="menu-icon">
                 <i class="fas fa-bars"></i>
             </div>
-            <ul>
-               
+            
+              <ul>
+                <li>
+    
+                    <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
+                            class="btn btn22" style="padding: 0 10px;">LOGOUT</button></a>
+                </li>
+            
+    
             </ul>
     
         </nav>
@@ -37,14 +44,14 @@
                     <br>
                     <br>
                     <br>
-                    <ul>
+                    <!-- <ul>
                     <li>
                       <a href="#" class="nav-link active" id="ModalExample" >
                         <button type="button" class="btn btn-success" (click)="logout()">LOGOUT</button>
                       </a>
                     </li>
                   </ul>
-                  
+                   -->
                 
             </nav>
         </div>
