--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -34,6 +34,8 @@
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminprogress">View Progress</a></li>
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/admincloselog">Close Logs</a></li>
                     <li class="" id="breadcrumbpaddingreport"><a class="" id="hover" href="#" routerLink="/generatereport">Generate Report</a></li>
+                    <li class="" id="breadcrumbpadding"><a class="" id="hover" href="#" routerLink="/newArtisan">Create new artisan</a></li>
+
                     
                         
                         
@@ -67,6 +69,9 @@
                                     <th scope="col">Date</th>
                                     <th scope="col">View Available</th>
                                     
+
+                                  
+                                    
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -89,6 +94,9 @@
                                     <td>{{me.progress}}</td>
                                     <td>{{me.req_date}}</td>
                                     <td><button type="button" class="btnAvailableTech" (click)=viewAvailableTech(me.id)><p>Artisan</p></button></td>
+                                    
+                                    
+                                    
                                 </tr>
                                 
                                 </tbody>
