--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -40,7 +40,7 @@
 
 #logoDiv {
 
-  margin-left: 0.35%;
+  margin-left: 5%;
   margin-top: 7.2px;
 
 }
@@ -53,11 +53,16 @@
 }
 
 /*logout button*/
-.btn22 {
-  color: white;
-  border: 2px solid white;
-  height: 40px;
-  background-color: #005596;
+.btn-success {
+  background-color:#eceef3 ;
+
+  border-radius: 5px;
+  height:50px;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  font-weight: bold;
 }
 
 .btn22:active {
@@ -306,6 +311,7 @@ a {
   border-radius: 30px;
   box-shadow: 3px 3px 10px rgb(188, 188, 188);
   padding: 0px 20px 20px 20px;
+  /* display: flex; */
 }
 
 .report-header {
@@ -347,9 +353,9 @@ a {
 
 .report-topic-heading,
 .item1 {
-  width: 1120px;
+   width: 1120px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-evenly;  
 }
 
 .t-op {
