--- a/src/app/hodpage/hodpage.component.html
+++ b/src/app/hodpage/hodpage.component.html
@@ -1,3 +1,31 @@
+
+<div class="">
+    <!-- <body class="container"> -->
+        <div class="log d-flex justify-content-end">
+            <nav class="header">
+                <div id="logoDiv">
+                    <a>
+                        <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
+                            style="float: left;height: 70px;width: 225px;" routerLink="read">
+                    </a>
+                </div>
+                <div id="menu-icon">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <ul>
+                    <li>
+        
+                        <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
+                                class="btn btn-success">LOGOUT</button></a>
+                    </li>
+                </ul>
+        
+            </nav>
+        </div>
+</div>
+<br>
+<br><br><br><br><br><br>
+
 <div class="tab-content ps-5" id="myTabContent">
     <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
 
@@ -36,6 +64,28 @@
                   
                
             </div>
+<!-- 
+            Modal
+      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Request</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close" (click)="doSomething()">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body" *ngIf="showSuccessMsg" class="alert alert-success" role="alert">
+                <strong>{{successmsg}}</strong>
+            </div>
+            <div class="modal-footer" >
+             
+              <button type="button" class="btn btn-primary" (click)="doSomething()"  routerLink="/HODpage" id="close">OK</button>
+            </div>
+          </div>
+        </div>
+    </div> -->
+       
 
             <!-- <form method="POST"
                 class="w-100 rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3"
@@ -118,5 +168,7 @@
         </div>
 
 
-
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
+    <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
+    </footer> 
