--- a/src/app/techlogin/techlogin.component.html
+++ b/src/app/techlogin/techlogin.component.html
@@ -10,14 +10,14 @@
           <button id="b12" type="button" class="btn-close float-right" (click)="close()" aria-label="Close"></button>
           <br>
           <label class="d-block mb-4">
-            <span class="form-label d-block" class="row mx-0 justify-content-center">Technician Number</span>
+            <span class="form-label d-block" class="row mx-0 justify-content-center">Technician ID</span>
             <br>
             <input
             [(ngModel)]="techLogin.tech_id" name="techLogin.email"
            
               type="text"
               class="form-control"
-              placeholder="214412845"
+              placeholder="Technician Id"
             />
           </label>
 
