--- a/src/app/track-request/track-request.component.css
+++ b/src/app/track-request/track-request.component.css
@@ -19,6 +19,19 @@
     box-sizing: border-box;
     z-index: 100;
   }
+  #logo-text{
+    margin-left: 7%;
+    margin-top: 7.2px;
+  
+  }
+
+  .toptitle{
+    font-size: 24px;
+    font-weight: bold;
+    color: #005596;
+    /* text-decoration: underline; */
+    text-align: center;
+  }
   .header a {
     padding: 0 32px;
     color: #eee;
@@ -41,6 +54,11 @@
     margin-left: 1%;
     margin-top: 7.2px;
   
+  }
+
+  .reqhead {
+     color: #005596;
+     align-items: center;
   }
   
   /*logout button*/
@@ -139,14 +157,26 @@ footer{
     width: 100%;
 }
 
-
+.sideNav{
+  box-shadow: 5px 0 2px grey
+}
 
 
 #b12{
   float: right;
 }
 
+.btn-success{
+  background-color:#eceef3 ;
 
+  border-radius: 5px;
+  height:50px;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  font-weight: bold;
+}
 
 
 
@@ -205,7 +235,7 @@ label {
 }
 
 .todo{
-    background-color: red;  
+    background-color: #005596;  
 }
 .Assigned{
 
@@ -213,20 +243,20 @@ label {
 }
 .InProgress{
 
-    background-color: orange;
+    background-color: #005596;
 }
 .OnHold{
 
-    background-color: lightgrey;
+    background-color: #005596;
 }
 .Done{
 
-    background-color: green;
+    background-color: #005596;
 }
 
 
 .todo:hover{
-    color: red;
+    color: rgb(26, 192, 54);
     background-color: white;
 
 }
@@ -241,12 +271,12 @@ label {
 
 }
 .OnHold:hover{
-    color: lightgrey;
+    color: rgb(218, 19, 224);
     background-color: white;
 
 }
 .Done:hover{
-    color: green;
+    color: rgb(219, 26, 26);
     background-color: white;
 
 }
