--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <!-- <app-techpage></app-techpage> -->
 <!-- <app-closelog></app-closelog> -->
 <!-- <app-report></app-report> -->
+<!-- <app-calender></app-calender> -->
