--- a/src/app/closelog/closelog.component.html
+++ b/src/app/closelog/closelog.component.html
@@ -1,22 +1,5 @@
 <!-- <body class="container"> -->
-    <div class="log d-flex justify-content-end">
-        <nav class="header">
-            <div id="logo-text">
-                <a>
-                    <img src="../../../assets/images/tut.png" alt="SMART FARM"
-                    style="float: left;height: 77px;width: 225px;" routerLink="read">
-                </a>
-            </div>
-            <div id="menu-icon">
-                <i class="fas fa-bars"></i>
-            </div>
-            <ul>
-               
-            </ul>
-    
-        </nav>
-    </div>
-    
+
     
     
     <br>
@@ -26,35 +9,6 @@
     
     
     <div class="d-flex justify-content-between">
-        <div class="sideNav">
-            <nav class="breadcrumbNav">
-                <ul>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
-                        routerLink="/adminpage">Requests</a></li>
-                    </ul>
-                    <ul>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
-                            routerLink="/adminviewprogress">View Progress</a></li>
-                </ul><ul>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding">
-                      <a class="anchorBorder" id="hover" disabled="true"><b>LOGS</b></a>
-                    </li>
-                </ul>
-                    
-                    <br>
-                    <br>
-                    <br>
-                    <ul>
-                    <li>
-                      <a href="#" class="nav-link active" id="ModalExample" >
-                        <button type="button" class="btn btn-success">LOGOUT</button>
-                      </a>
-                    </li>
-                  </ul>
-                  
-                
-            </nav>
-        </div>
         <!-- <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist">
     
             <li>
@@ -79,7 +33,7 @@
             <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
     
                 <br>
-                    <div class="content card mt-4 p-4">
+                    <div class="chart2" style="display: inline-block;">
 
                 
                         <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin Close Log</h1>
@@ -104,8 +58,8 @@
                                 <td>{{data.progress}}</td>
                                 <td>{{data.status}}</td>
                                 <td>
-                                <button type="button" class="btn btn-light" (click)="log($event,data.id)" >Close Log</button>
-                                </td> 
+                                <button type="button" class="btn btn-light" (click)="log($event,data.id)" name="data.status" [(ngModel)]="data.status" >Close Log</button>
+                                </td>
                               </tr>
                             </tbody>
                           </table>
@@ -204,10 +158,6 @@
     
     
     
-    
-    
-    <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
-    </footer>
     
     
     
