--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,9 +8,32 @@
           enctype="multipart/form-data">
           <button id="b12" type="button" class="btn-close" (click)="close()" aria-label="Close"></button>
           <br>
+          <div *ngIf="showSuccessMsg" class="alert alert-success" role="alert">
+            <strong>{{successmsg}}</strong>
+            <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+                aria-label="Close"></button>
+
+        </div>
+        <div *ngIf="showSuccessMsg1" class="alert alert-success" role="alert">
+          <strong>{{successmsg1}}</strong>
+          <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+              aria-label="Close"></button>
+      </div>
+
+      <div *ngIf="showSuccessMsg2" class="alert alert-success" role="alert">
+        <strong>{{successmsg2}}</strong>
+        <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+            aria-label="Close"></button>
+    </div>
+
+    <div *ngIf="showSuccessMsg3" class="alert alert-success" role="alert">
+      <strong>{{successmsg3}}</strong>
+      <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+          aria-label="Close"></button>
+  </div>
         
           <label class="d-block mb-4">
-            <span class="form-label d-block" class="row mx-0 justify-content-center">Admin Email</span>
+            <span class="form-label d-block" class="row mx-0 justify-content-center">Admin Number</span>
             <br>
             <input
             [(ngModel)]="adminLogin.admin_id" name="adminLogin.admin_id"
@@ -25,7 +48,7 @@
             <br>
             <input
             [(ngModel)]="adminLogin.password" name="adminLogin.password"
-              type="password"
+              type="text"
               class="form-control"
               placeholder="password"
             />
