--- a/src/app/techpage/techpage.component.html
+++ b/src/app/techpage/techpage.component.html
@@ -1,5 +1,209 @@
-<!-- <body class="container"> -->
-    <div class="log d-flex justify-content-end">
+
+<body>
+
+  <div class="log d-flex justify-content-end">
+      <nav class="header" style="height: 85px;">
+          <div id="logo-text" >
+              <a>
+                  <img src="../../../assets/images/tut.png" alt="SMART FARM" style="float: left;height: 72px;width: 250px; 
+                  height: 75px;margin-top: 5px;" routerLink="read">
+              </a>
+          </div>
+          <div id="menu-icon">
+              <i class="fas fa-bars"></i>
+          </div>
+  
+          <ul>
+              <li>
+                
+                  <a href = "#"class="nav-link active" id="ModalExample" (click)="logout()" ><button type="button" class="btn btn-success">LOGOUT</button></a>
+                </li>
+              </ul>
+          
+  
+      </nav>
+  </div>
+      
+      
+
+
+ 
+  <br>
+  <br>
+  <br>
+  <br>
+  
+
+
+
+  <div class="container2 d-flex justify-content-between ">
+      <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist">
+  
+          <li class="nav-item" role="presentation" id="doing-tab1">
+            <a class="nav-link active colorRed" id="doing-tab" data-bs-toggle="tab"
+              data-bs-target="#doing" type="text" role="tab" aria-controls="doing" aria-selected="true">
+              <br><a><b>TASKS</b></a></a>
+          </li>
+          
+        </ul>
+        
+        
+      <div class="tab-content ps-5 mt-6" id="myTabContent">
+
+        
+        <br>
+        <br>
+          <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
+
+              <div class="stats d-flex justify-content-between">
+                
+                <h1 class="d-flex justify-content-center" width="750" style="background-color: rgb(182, 179, 179); width:35rem">Welcome Artisan</h1>
+                  
+                  </div>
+              
+              
+
+              <!-- class="ps-5 w-90 rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-8 px-lg-2 col-xl-11 px-xl-0 px-xxl-3" -->
+              <!-- <button type="button" class="btn btn-primary justify-content-center printReportBtn" (click)="export()" target="_blank">Export Report</button> -->
+              <div class="row">
+                  <div class="col">
+              <div class="charts">
+                  <div class="chart" style="display: inline-block;">
+
+                      
+                  <svg width="750" height="400" viewBox="0 0 64 64" data-name="Layer 1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><defs><style> .cls-1 { fill: #e7ecef; } .cls-2 { fill: #8b8c89; } .cls-3 { fill: #bc6c25; } .cls-4 { fill: #a3cef1; } .cls-5 { fill: #dda15e; } .cls-6 { fill: #6096ba; } .cls-7 { fill: #274c77; } </style></defs><path class="cls-6" d="M35,25.5c0,1.66-1.34,3-3,3s-3-1.34-3-3h-3c-5.52,0-10,4.48-10,10v4H48v-4c0-5.52-4.48-10-10-10h-3Z"></path><path class="cls-5" d="M36.58,22.54l-3,1.29c-1.01,.43-2.15,.43-3.15,0l-3-1.29c-1.47-.63-2.42-2.08-2.42-3.68v-5.36c0-3.31,2.69-6,6-6h2c3.31,0,6,2.69,6,6v5.36c0,1.6-.95,3.05-2.42,3.68Z"></path><path class="cls-7" d="M22,15.23c-.29,.17-.64,.27-1,.27-1.1,0-2-.9-2-2s.9-2,2-2c.42,0,.81,.13,1.14,.36"></path><path class="cls-7" d="M42,15.23c.29,.17,.64,.27,1,.27,1.1,0,2-.9,2-2s-.9-2-2-2c-.42,0-.81,.13-1.14,.36"></path><path class="cls-3" d="M35,25.5c0,1.66-1.34,3-3,3s-3-1.34-3-3v-2.29l1.42,.61c1.01,.44,2.15,.44,3.16,0l1.42-.61v2.29Z"></path><path class="cls-7" d="M16,37.09c-.61,.26-1.29,.41-2,.41-2.76,0-5-2.24-5-5s2.24-5,5-5c1.64,0,3.09,.79,4,2.01,.67-.91,1.5-1.69,2.44-2.32-.25-.1-.48-.25-.68-.45-.49-.48-.67-1.15-.57-1.78-1.04-.72-2.24-1.22-3.53-1.46-.37,.52-.97,.86-1.66,.86s-1.29-.34-1.66-.86c-1.29,.24-2.49,.74-3.53,1.46,.1,.63-.08,1.3-.57,1.78-.48,.49-1.15,.67-1.78,.57-.72,1.04-1.22,2.24-1.46,3.53,.52,.37,.86,.97,.86,1.66s-.34,1.29-.86,1.66c.24,1.29,.74,2.49,1.46,3.53,.63-.1,1.3,.08,1.78,.57,.49,.48,.67,1.15,.57,1.78,1.04,.72,2.24,1.22,3.53,1.46,.37-.52,.97-.86,1.66-.86s1.29,.34,1.66,.86c1.29-.24,2.49-.74,3.53-1.46-.03-.18-.03-.36-.01-.54h-3.18v-2.41Z"></path><path class="cls-7" d="M46,29.51c.91-1.22,2.36-2.01,4-2.01,2.76,0,5,2.24,5,5s-2.24,5-5,5c-.71,0-1.39-.15-2-.41v2.41h-3.18c.02,.18,.02,.36-.01,.54,1.04,.72,2.24,1.22,3.53,1.46,.37-.52,.97-.86,1.66-.86s1.29,.34,1.66,.86c1.29-.24,2.49-.74,3.53-1.46-.1-.63,.08-1.3,.57-1.78,.48-.49,1.15-.67,1.78-.57,.72-1.04,1.22-2.24,1.46-3.53-.52-.37-.86-.97-.86-1.66s.34-1.29,.86-1.66c-.24-1.29-.74-2.49-1.46-3.53-.63,.1-1.3-.08-1.78-.57-.49-.48-.67-1.15-.57-1.78-1.04-.72-2.24-1.22-3.53-1.46-.37,.52-.97,.86-1.66,.86s-1.29-.34-1.66-.86c-1.29,.24-2.49,.74-3.53,1.46,.1,.63-.08,1.3-.57,1.78-.2,.2-.43,.35-.68,.45,.94,.63,1.77,1.41,2.44,2.32Z"></path><path class="cls-2" d="M19.18,39.5c-.02,.18-.02,.36,.01,.54-1.04,.72-2.24,1.22-3.53,1.46-.37-.51-.96-.85-1.64-.86-.01,.03-.02,.06-.02,.09,1.06,.48,1.79,1.54,1.79,2.77s-.73,2.29-1.79,2.77c.2,1.33,.55,2.61,1.02,3.83,1.16-.11,2.33,.43,2.95,1.5,.61,1.07,.5,2.36-.18,3.31,.83,1.03,1.77,1.97,2.8,2.8,.95-.68,2.24-.79,3.31-.18,1.07,.62,1.61,1.79,1.5,2.95,1.22,.47,2.5,.82,3.83,1.02,.48-1.06,1.54-1.79,2.77-1.79s2.29,.73,2.77,1.79c1.33-.2,2.61-.55,3.83-1.02-.11-1.16,.43-2.33,1.5-2.95,1.07-.61,2.36-.5,3.31,.18,1.03-.83,1.97-1.77,2.8-2.8-.68-.95-.79-2.24-.18-3.31,.62-1.07,1.79-1.61,2.95-1.5,.47-1.22,.82-2.5,1.02-3.83-1.06-.48-1.79-1.54-1.79-2.77s.73-2.29,1.79-2.77c0-.03-.01-.06-.02-.09-.68,.01-1.27,.35-1.64,.86-1.29-.24-2.49-.74-3.53-1.46,.03-.18,.03-.36,.01-.54h-1.51c.45,1.25,.69,2.6,.69,4,0,6.63-5.37,12-12,12s-12-5.37-12-12c0-1.4,.24-2.75,.69-4h-1.51Z"></path><path class="cls-4" d="M43.31,39.5c.45,1.25,.69,2.6,.69,4,0,6.63-5.37,12-12,12s-12-5.37-12-12c0-1.4,.24-2.75,.69-4"></path><path class="cls-4" d="M18,29.51c-1.26,1.67-2,3.74-2,5.99v1.59c-.61,.26-1.29,.41-2,.41-2.76,0-5-2.24-5-5s2.24-5,5-5c1.64,0,3.09,.79,4,2.01Z"></path><path class="cls-4" d="M48,37.09v-1.59c0-2.25-.74-4.32-2-5.99,.91-1.22,2.36-2.01,4-2.01,2.76,0,5,2.24,5,5s-2.24,5-5,5c-.71,0-1.39-.15-2-.41Z"></path><path class="cls-7" d="M39,13.5c-.52-.65-1.03-1.19-1.52-1.62-1.92-1.72-4.78-1.49-6.7,.24-2.31,2.08-5.79,1.39-5.79,1.39,0-3.31,2.69-6,6-6h2c3.31,0,6,2.69,6,6Z"></path><path class="cls-1" d="M39,18.1v-4.6c0-3.31-2.69-6-6-6h-2c-3.31,0-6,2.69-6,6v4h-2c-.55,0-1-.45-1-1v-3c0-5.52,4.48-10,10-10,2.76,0,5.26,1.12,7.07,2.93s2.93,4.31,2.93,7.07v3.18c0,.48-.34,.89-.8,.98l-2.2,.44Z"></path><path class="cls-6" d="M32,19.5h0c-.11-.54,.24-1.07,.78-1.18l8.22-1.64v-2.86c0-4.79-3.61-8.98-8.38-9.3-5.24-.35-9.62,3.81-9.62,8.98v3h2v2h-2c-1.1,0-2-.9-2-2v-2.68c0-5.72,4.24-10.74,9.94-11.27,6.54-.62,12.06,4.53,12.06,10.95v3.18c0,.95-.67,1.77-1.61,1.96l-8.22,1.64c-.54,.11-1.07-.24-1.18-.78Z"></path></g></svg>    </div>
+</div>
+</div>
+<br>
+    <br>
+<div class="col">
+<div class="charts1">
+    <br>
+    <br>
+
+              <div class="chart11" id="doughnut-chart" style="display: inline-block;">
+                  <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Tasks</h1>
+                  <div class="status-content">
+                    <table class="table">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col"> </th>
+                                <th scope="col">Ref.</th>
+                                <th scope="col">Requested Date</th>
+                                <th scope="col">Description</th>
+                                <!-- <th scope="col">Priority</th> -->
+                                <th scope="col">Venue</th>
+                                <th scope="col">Progress Status</th>
+                               
+                                
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor = "let data of readData">
+                                <th scope="row"><svg fill="#2a6096" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                                    xmlns:xlink="http://www.w3.org/1999/xlink" width="30px" height="70  px"
+                                    viewBox="0 0 45.532 45.532" xml:space="preserve">
+                                    <g>
+                                        <path d="M22.766,0.001C10.194,0.001,0,10.193,0,22.766s10.193,22.765,22.766,22.765c12.574,0,22.766-10.192,22.766-22.765
+                    S35.34,0.001,22.766,0.001z M22.766,6.808c4.16,0,7.531,3.372,7.531,7.53c0,4.159-3.371,7.53-7.531,7.53
+                    c-4.158,0-7.529-3.371-7.529-7.53C15.237,10.18,18.608,6.808,22.766,6.808z M22.761,39.579c-4.149,0-7.949-1.511-10.88-4.012
+                    c-0.714-0.609-1.126-1.502-1.126-2.439c0-4.217,3.413-7.592,7.631-7.592h8.762c4.219,0,7.619,3.375,7.619,7.592
+                    c0,0.938-0.41,1.829-1.125,2.438C30.712,38.068,26.911,39.579,22.761,39.579z" />
+                                    </g>
+                                </svg></th>
+                                <th scope="row">{{ data.req_date }}</th>
+                                <th scope="row">{{ data.id }}</th>
+                                <th scope="row">{{ data.description }}</th>
+                                <td>{{ data.venue }}</td>
+                                <td>
+                                    <select id="Cater" (change)="progressTask($event, data.id)" [(ngModel)]="data.progress">
+                                      <option value="">Select Task Status</option>
+                                      <option value="on-hold">On-Hold</option>
+                                      <option value="in-progress">in-progress</option>
+                                      <option value="complete">complete</option>
+                                    </select>
+                                  </td>
+                          </tr>
+                          
+                        </tbody>
+                      </table>
+                  </div>
+                  </div>
+              </div>
+          </div>
+              
+
+                  </div>
+
+          </div>
+      </div>
+          
+          <div class="tab-pane fade" id="done" role="tabpanel" aria-labelledby="done-tab">
+              <br>
+              <!-- <app-adminviewprogress></app-adminviewprogress> -->
+
+          </div>
+
+</div>
+
+  
+<footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
+</footer>
+
+
+
+</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="log d-flex justify-content-end">
         <nav class="header">
             <div id="logo-text">
                 <a>
@@ -47,7 +251,7 @@
                   
                 
             </nav>
-        </div>
+        </div> -->
         <!-- <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist">
     
             <li>
@@ -68,7 +272,7 @@
                     role="tab" aria-controls="done" aria-selected="false"><br><a>Feedback</a></button>
             </li>
         </ul> -->
-        <div class="tab-content ps-5" id="myTabContent">
+        <!-- <div class="tab-content ps-5" id="myTabContent">
             <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
     
                 <br>
@@ -83,9 +287,9 @@
                               <tr>
                                 <th scope="col">Category</th>
                                 <th scope="col">Description</th>
-                                <th scope="col">Assigned Task</th>
-                                <th scope="col">Expected</th>
-                                <!-- <th scope="col">Priority</th> -->
+                                <th scope="col">Priority</th>
+                                <th scope="col">Expected Finish Date</th>
+                                <th scope="col">Expected Finish Time</th>
                                 <th scope="col">Venue</th>
                                 <th scope="col">Progress Status</th>
                               </tr>
@@ -94,14 +298,14 @@
                               <tr *ngFor="let data of readData">
                                 <td>{{ data.category }}</td>
                                 <td>{{ data.description }}</td>
-                                <td>{{ data.assigned_date }}</td>
+                                <td>{{ data.priority }}</td>
                                 <td>{{ data.expected_date }}</td>
-                                <!-- <td>{{ data.priority }}</td> -->
+                                <td>{{ data.expected_time }}</td>
                                 <td>{{ data.venue }}</td>
                                 <td>
                                   <select id="Cater" (change)="progressTask($event, data.id)" [(ngModel)]="data.progress">
                                     <option value="">Select Task Status</option>
-                                    <option value="on-hold">On-Hold</option>
+                                    <option value="to-do">To-do</option>
                                     <option value="in-progress">in-progress</option>
                                     <option value="complete">complete</option>
                                   </select>
@@ -111,7 +315,7 @@
                           </table>
                           
                        
-                    </div>
+                    </div> -->
     
                     <!-- <form method="POST"
                         class="w-100 rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3"
@@ -191,7 +395,7 @@
                     </form> -->
     
     
-                </div>
+                <!-- </div>
     
     
     
@@ -207,8 +411,7 @@
     
     
     <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
-    </footer>
-    
+    </footer> -->
     
     
     
