--- a/src/app/track-request/track-request.component.css
+++ b/src/app/track-request/track-request.component.css
@@ -1,133 +1,56 @@
-.stats{
-    margin: 3.47%;
-  }
+/* .tab-content {
+  float: right;
+  width: 80%;
+  margin-right: 0%;
+} */
+/* .nav-tabs {
+background: rgba(155, 154, 154, 0.8);
+border-right: 5px solid #0e0f52;
+}
 
 
+ */
 
-/* Start of the navigation bar*/
-.header {
-    height: 82px;
-    background: #0c0c0c;
-    width: 100%;
-    margin: 0;
-    position: fixed;
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    padding:0 16px 0 0;
-    box-sizing: border-box;
-    z-index: 100;
-  }
-  .header a {
-    padding: 0 32px;
-    color: #eee;
-    transition: 0.4s;
-  }
-  .header a:hover {
-    text-decoration: none;
-    color: red;
-  }
-  .header ul {
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    margin: 0;
-  }
-  #logoDiv{
+/* .reqhead1{
   
-    margin-left: 1%;
-    margin-top: 7.2px;
-  
-  }
-  
-  /*logout button*/
-  .btn-success{
-    color: white;
-    border: 2px solid white;
-    height: 40px;
-    background-color: #005596;
-  }
-  .btn-success:active{
-    border: white;
-    background-color: #005596;
-  }
-  /* End of the navigation bar*/
-  /* Start of  Everything on the side nav*/
-  .sideNav {
-    float: left;
-   
-    box-shadow: 5px 0 2px #969292;
-    width: 335px;
-    height: 1055px;
-    
-  }
-  .breadcrumbNav {
-    margin: 12% 10px;
-    padding: 20px 30px;      
-  }
-  #breadcrumbpadding {
-  
-    width: 120px;  
-    padding: 6px 0;
-  }
-  a {
-    padding-top: 20px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    /* identical to box height */
-    letter-spacing: 0.035em;
-    text-transform: capitalize;
-    color: #005596;
-    text-decoration: none;
-  }
-  .breadcrumbNav ul {
-    list-style:none ;
-    flex-direction: column;
-  }
-  .breadcrumb-item.active {
-    border-bottom: 3px solid #005596;
-    width: 115px;  
-  }
-  /* End of Everything on the side nav*/
-  
-  /*Disable the active link*/
-  a:disabled, a[disabled] {
-    color: #005596;
-  }
-  .anchorBorder{
-    margin:0 20%;
-  }
-  /*Adding a hover effect on the sidenav links*/
-  #hover:hover {
+    border: 2px solid rgb(255, 255, 255);
+    background-color: #ECE7E7; 
     font-weight: bold;
-   
-   
-  }
-  .container2{
-    margin-top: 3.8%;
-  }
-  /*Div for the content on the right*/
-  .tab-content {
-      float: right;
-      width: 80%;
-      margin-right: auto;
-    }
 
-    #alignTitleCenter{
-        margin: 0 auto;
-    }
-    
-    .reqhead1{
-     
-      font-weight: bold;
-    font-size: 28px;
-    color: #000000;
-  }
+
+
+
+font-family: 'Sansation';
+font-style: normal;
+font-weight: 700;
+font-size: 32px;
+line-height: 36px;
+letter-spacing: 0.15em;
+
+color: #000000;
+} */
+
+/* .reqhead2{
+  
+  border: 2px solid rgb(255, 255, 255);
+  background-color: #ECE7E7; 
+  font-weight: bold;
+
+
+
+
+font-family: 'Sansation';
+font-style: normal;
+font-weight: 700;
+font-size: 32px;
+line-height: 36px;
+letter-spacing: 0.15em;
+
+color: #000000;
+} */
+
+
+
 /*Footer*/
 
 footer{
@@ -139,6 +62,84 @@ footer{
     width: 100%;
 }
 
+.reqhead1{
+  
+    border: 2px solid rgb(255, 255, 255);
+    background-color: #ECE7E7; 
+    font-weight: bold;
+
+
+
+
+font-family: 'Sansation';
+font-style: normal;
+font-weight: 700;
+font-size: 32px;
+line-height: 36px;
+letter-spacing: 0.15em;
+
+color: #000000;
+}
+
+.reqhead2{
+  
+  border: 2px solid rgb(255, 255, 255);
+  background-color: #ECE7E7; 
+  font-weight: bold;
+
+
+
+
+font-family: 'Sansation';
+font-style: normal;
+font-weight: 700;
+font-size: 32px;
+line-height: 36px;
+letter-spacing: 0.15em;
+
+color: #000000;
+}
+
+/*Navigation*/
+
+.header {
+  height: 81px;
+  background: #0c0c0c;
+  width: 100%;
+  margin: 0;
+  position: fixed;
+  font-family: 'Roboto Condensed',sans-serif;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  padding:0 16px 0 0;
+  box-sizing: border-box;
+  z-index: 100;
+}
+
+/* .header a {
+  padding: 0 32px;
+  color: #eee;
+  transition: 0.4s;
+} */
+
+
+
+/* select#Cater,
+input.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  margin-bottom: 1rem;
+} */
 
 
 
@@ -146,16 +147,87 @@ footer{
   float: right;
 }
 
-
-
-
-
-#table {
-    width: 90%;
-    margin: auto auto;
-
+.red-button {
+    background-color: red;
+    color: white;
   }
 
+
+
+.sideNav {
+float: left;
+box-shadow: 5px 0 2px #575656;
+width: 300px;
+height: 1132px;
+
+
+}
+
+.breadcrumbNav {
+margin: 12% 10px;
+padding: 20px 30px; 
+top:0%;  
+transform: translateY(-1%);     
+}
+#breadcrumbpadding {
+
+width: 115px;  
+padding: 6px 0;
+}
+
+a {
+font-size: 16px;
+line-height: 20px;
+color: #2e2e2e;
+text-decoration: none;
+}
+
+.breadcrumbNav ul {
+
+list-style:none ;
+flex-direction: column;
+}
+.breadcrumb-item.active {
+
+
+border-bottom: 3px solid #4b4c4d;
+width: 115px;  
+
+}
+
+.anchorBorder{
+
+  
+margin:0 0%;
+}
+
+#hover:hover {
+font-weight: 700px;
+color: rgb(6, 85, 42);
+font-size: large;
+
+
+
+margin-bottom: 24px;
+margin-left: 10px;
+
+cursor: pointer;
+
+
+
+
+}
+
+
+
+
+
+    
+.contentContainerRight {
+   
+height: 1055px; 
+padding-left: 10px;
+}
 form {
     
     width: 600px;
@@ -166,6 +238,23 @@ form {
 }
 
 
+.toptitle {
+   
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 36px;
+    letter-spacing: 0.15em;
+    background: #ECE7E7;
+    width: 1110px;
+    margin:5% 6%;
+    padding-left: 50px;
+}
+h4 {
+    text-align: center;
+    font-weight: 400;
+    
+}
 
 .container {
     
@@ -192,6 +281,16 @@ form {
     margin: 1%;
 }
 
+.container .progress {
+    margin: 0 auto;
+    width: 800px;
+}
+.progress {
+    padding: 4px;
+    background:white;
+    border:1px solid gray;
+}
+
 label {
     display: inline-block;
     margin: 0 60px 8px;
@@ -205,7 +304,8 @@ label {
 }
 
 .todo{
-    background-color: red;  
+    background-color: red;
+    
 }
 .Assigned{
 
@@ -255,3 +355,202 @@ label {
 
 
 
+@media only screen and (max-width: 1200px) {
+    .sticky {
+        width: 100%;
+    }
+    body {
+        background-color: yellow;
+    }
+    
+    .contentContainerRight {
+       
+        margin-top:0%;
+        margin-left: 10%;
+        
+    
+    
+    }
+    form { 
+
+        width: 900px;
+    }
+    .toptitle {
+        border:1px solid red;
+        width: 700px;
+        margin:5% 17%;
+        
+        
+    }
+    label {
+        display: inline-block;
+        margin: 0 30px 0px;
+        padding: 5px 15px;
+       
+    
+    }
+
+    .middleTableDiv {
+
+        width:720px;
+        
+
+    }
+   
+
+}
+@media only screen and (max-width: 992px) {
+    body {
+        background-color:lightgray;
+        width: 100%;
+    }
+    .logo {
+        height: 90px;
+        margin-top: 4px;
+    }
+    .sticky {
+        width: 100%;
+    }
+    
+    .contentContainerRight {
+        
+        margin-top: 0%;
+        margin-left: 12%;
+    
+    
+    }
+    form { 
+
+        width: 600px;
+    }
+    .toptitle {
+        width: 660px;
+        margin:5% 8%;
+        font-size: 20px;
+        
+        padding-left: 40px;
+        
+    }
+    h4 {
+        padding-left: 60px;
+        font-weight: 400;
+        
+    }
+    
+    .container {
+        margin: 20px auto;
+        width: 700px;
+        text-align: center;
+       
+    }
+    label {
+        display: inline-block;
+        margin: 0 25px ;
+        padding: 1px 10px;
+       
+    
+    }
+    .middleTableDiv {
+
+        width:600px;
+        margin: auto 9%;
+
+    }
+
+    @media only screen and (max-width: 768px) {
+
+        body{
+            background-color: rgb(235, 143, 89);
+            width: 100%;
+        }
+        .sticky{
+            width: 100%;
+            border: 1px solid red;
+        }
+        .logo {
+           height: 80px;
+        }
+        
+        .toggleMenu {
+
+            display:block;
+            width: 10%;
+            
+            
+            
+            
+        }
+        .contentContainerRight {
+          
+            margin-top: 0%;
+            margin-left: -12%;
+        
+        
+        }
+        h4 {
+            padding-left: 80px;
+            font-weight: 400;
+            
+        }
+        .container {
+
+            margin: 20px 15%;
+            width: 1000px;
+            text-align: center;
+           
+        }
+        label {
+            display: inline-block;
+            margin: 0 10px ;
+            padding: 1px 10px;
+            font-weight:500;
+           
+        
+        }
+        .middleTableDiv {
+
+            width:500px;
+            margin: auto 18%;
+    
+        }
+    }
+
+    @media only screen and (max-width: 576px) {
+
+        body{
+            background-color: rgb(131, 247, 116);
+            width: 100%;
+        }
+        
+        .contentContainerRight {
+           
+            margin-top: 0%;
+            margin-left: -28%;
+        
+        
+        }
+        .toptitle {
+            width: 520px;
+            margin:5% 13%;
+            font-size: 18px;
+            
+            padding-left: 40px;
+            
+        }
+        .container {
+            margin: 20px 15%;
+            width: 500px;
+            text-align: center;
+           
+        }
+        .middleTableDiv {
+
+            width:500px;
+            margin: auto 15%;
+    
+        }
+
+
+    }
+
+}
