--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -54,7 +54,13 @@
 
         <li class="nav-item" role="presentation">
             <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
-                routerLink="/report"><br><a><b>REPORT</b></a></a>
+                routerLink="/generatereport"><br><a><b>REPORT</b></a></a>
+
+        </li>
+
+        <li class="nav-item" role="presentation">
+            <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                routerLink="/technician-table"><br><a><b>TABLE</b></a></a>
 
         </li>
 
