--- a/src/app/staffpage/staffpage.component.css
+++ b/src/app/staffpage/staffpage.component.css
@@ -1,76 +1,15 @@
 .tab-content {
   float: right;
-  width: 150%;
+  width: 80%;
   margin-right: 0%;
-  
 }
 .nav-tabs {
-position: center;
-width: 335px;
-height: 600px;
-left: 2px;
-float: left;
-width: 150%;
-
-
- font-family: "Times New Roman";
-font-style: normal;
-font-weight: 400;
-font-size: 22px;
-line-height: 25px;
-letter-spacing: 0.035em;
-
-
-
-
-
-
-width: 335px;
-
-left: -2px;
-top: 110px;
-
-background: rgba(255, 255, 255, 0.8);
-
-
-
-}
-
-.nav-item{
-  padding: 8px 24px;
-  border-left: 8px solid rgb(14, 60, 90);
-  
-  transition: 0.4s;
-  font-family: 'georgia';
-  margin-bottom: 24px;
-  margin-left: 24px;
-  font-weight: bold;
-  cursor: pointer;
-  background: white;
-}
-
-.nav-item a{
-  font-size: 16px;
-line-height: 20px;
-color: #2e2e2e;
-text-decoration: none;
-width: 115px; 
-
-}
-
-.nav-item:hover {
-  
-  text-decoration: none;
-    padding: 8px 0;
-    
-    box-shadow: 4px 4px 4px rgba(133, 129, 129, 0.993);
-  
+background: rgba(155, 154, 154, 0.8);
+border-right: 5px solid #0e0f52;
 }
 
 
-.nav-link.active {
-  border: none;
-}
+
 
 .reqhead1{
   
@@ -112,14 +51,13 @@ color: #000000;
 
 
 
-
 /*Footer*/
 
 footer{
   background: black;
     padding: 8px;
     color: #eee;
-    display: center;
+   text-align: center;
     bottom: 0;
     width: 100%;
 }
@@ -128,8 +66,8 @@ footer{
 
 /*Navigation*/
 
-nav {
-  height: 72px;
+.header {
+  height: 81px;
   background: #0c0c0c;
   width: 100%;
   margin: 0;
@@ -143,83 +81,12 @@ nav {
   z-index: 100;
 }
 
-nav a {
+.header a {
   padding: 0 32px;
   color: #eee;
   transition: 0.4s;
 }
 
-nav a:hover {
-  text-decoration: none;
-  color: red;
-}
-
-nav ul {
-  display: flex;
-  list-style: none;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
-  margin: 0;
-}
-
-.active {
-  color:#0e0d0d;
-}
-
-#menu-icon {
-  height: 100%;
-  font-size: 28px;
-  padding: 0 4px;
-  color: #eee;
-  display: none;
-  align-items: center;
-}
-
-
-
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
 
 
 select#Cater,
@@ -242,30 +109,21 @@ input.form-control {
 
 }
 
-form .div #reqhead{
-  position: absolute;
-width: 271px;
-height: 24px;
-left: 483px;
-top: 217px;
 
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 400;
-font-size: 20px;
-line-height: 36px;
-letter-spacing: 0.15em;
-
-color: #000000;
-
+#b12{
+  float: right;
 }
 
 
-/* Three image containers (use 25% for four, and 50% for two, etc) */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
+
+
+.sideNav {
+float: left;
+box-shadow: 5px 0 2px #575656;
+width: 300px;
+height: 850px;
+
+
 }
 
 .breadcrumbNav {
@@ -300,6 +158,12 @@ width: 115px;
 
 }
 
+.anchorBorder{
+
+  
+margin:0 0%;
+}
+
 #hover:hover {
 font-weight: 700px;
 color: rgb(6, 85, 42);
@@ -311,6 +175,9 @@ margin-bottom: 24px;
 margin-left: 10px;
 
 cursor: pointer;
+
+
+
 
 }
 
