--- a/src/app/track-request/track-request.component.css
+++ b/src/app/track-request/track-request.component.css
@@ -1,56 +1,139 @@
-/* .tab-content {
-  float: right;
-  width: 80%;
-  margin-right: 0%;
-} */
-/* .nav-tabs {
-background: rgba(155, 154, 154, 0.8);
-border-right: 5px solid #0e0f52;
-}
+.stats{
+    margin: 3.47%;
+  }
+  .backFrom h2{
+    align-items: center;
+   justify-content: center;
+   font-weight: bold;
+   text-align: center;
+  }
 
 
- */
 
-/* .reqhead1{
+/* Start of the navigation bar*/
+.header {
+    height: 82px;
+    background: #0c0c0c;
+    width: 100%;
+    margin: 0;
+    position: fixed;
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    padding:0 16px 0 0;
+    box-sizing: border-box;
+    z-index: 100;
+  }
+  .header a {
+    padding: 0 32px;
+    color: #eee;
+    transition: 0.4s;
+  }
+  .header a:hover {
+    text-decoration: none;
+    color: red;
+  }
+  .header ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    margin: 0;
+  }
+  #logo-text{
   
-    border: 2px solid rgb(255, 255, 255);
-    background-color: #ECE7E7; 
+    margin-left: 5%;
+    margin-top: 7.2px;
+  
+  }
+  
+  /*logout button*/
+  .btn-success{
+    color: white;
+    border: 2px solid white;
+    height: 40px;
+    background-color: #005596;
+  }
+  .btn-success:active{
+    border: white;
+    background-color: #005596;
+  }
+  /* End of the navigation bar*/
+  /* Start of  Everything on the side nav*/
+  .sideNav {
+    float: left;
+   
+    box-shadow: 5px 0 2px #969292;
+    width: 335px;
+    height: 1055px;
+    
+  }
+  .breadcrumbNav {
+    margin: 12% 10px;
+    padding: 20px 30px;      
+  }
+  #breadcrumbpadding {
+  
+    width: 120px;  
+    padding: 6px 0;
+  }
+  a {
+    padding-top: 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    /* identical to box height */
+    letter-spacing: 0.035em;
+    text-transform: capitalize;
+    color: #005596;
+    text-decoration: none;
+  }
+  .breadcrumbNav ul {
+    list-style:none ;
+    flex-direction: column;
+  }
+  .breadcrumb-item.active {
+    border-bottom: 3px solid #005596;
+    width: 115px;  
+  }
+  /* End of Everything on the side nav*/
+  
+  /*Disable the active link*/
+  a:disabled, a[disabled] {
+    color: #005596;
+  }
+  .anchorBorder{
+    margin:0 20%;
+  }
+  /*Adding a hover effect on the sidenav links*/
+  #hover:hover {
     font-weight: bold;
+   
+   
+  }
+  .container2{
+    margin-top: 3.8%;
+  }
+  /*Div for the content on the right*/
+  .tab-content {
+      float: right;
+      width: 80%;
+      margin-right: auto;
+    }
 
-
-
-
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 700;
-font-size: 32px;
-line-height: 36px;
-letter-spacing: 0.15em;
-
-color: #000000;
-} */
-
-/* .reqhead2{
-  
-  border: 2px solid rgb(255, 255, 255);
-  background-color: #ECE7E7; 
-  font-weight: bold;
-
-
-
-
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 700;
-font-size: 32px;
-line-height: 36px;
-letter-spacing: 0.15em;
-
-color: #000000;
-} */
-
-
-
+    #alignTitleCenter{
+        margin: 0 auto;
+    }
+    
+    .reqhead1{
+     
+      font-weight: bold;
+    font-size: 28px;
+    color: #000000;
+  }
 /*Footer*/
 
 footer{
@@ -60,86 +143,14 @@ footer{
    text-align: center;
     bottom: 0;
     width: 100%;
+    background: black;
+    padding: 8px;
+    color: #eee;
+    margin-top: auto;
+    text-align: center;
+    height: 40px;
 }
 
-.reqhead1{
-  
-    border: 2px solid rgb(255, 255, 255);
-    background-color: #ECE7E7; 
-    font-weight: bold;
-
-
-
-
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 700;
-font-size: 32px;
-line-height: 36px;
-letter-spacing: 0.15em;
-
-color: #000000;
-}
-
-.reqhead2{
-  
-  border: 2px solid rgb(255, 255, 255);
-  background-color: #ECE7E7; 
-  font-weight: bold;
-
-
-
-
-font-family: 'Sansation';
-font-style: normal;
-font-weight: 700;
-font-size: 32px;
-line-height: 36px;
-letter-spacing: 0.15em;
-
-color: #000000;
-}
-
-/*Navigation*/
-
-.header {
-  height: 81px;
-  background: #0c0c0c;
-  width: 100%;
-  margin: 0;
-  position: fixed;
-  font-family: 'Roboto Condensed',sans-serif;
-  font-size: 20px;
-  display: flex;
-  justify-content: space-between;
-  padding:0 16px 0 0;
-  box-sizing: border-box;
-  z-index: 100;
-}
-
-/* .header a {
-  padding: 0 32px;
-  color: #eee;
-  transition: 0.4s;
-} */
-
-
-
-/* select#Cater,
-input.form-control {
-  display: block;
-  width: 100%;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  margin-bottom: 1rem;
-} */
 
 
 
@@ -147,87 +158,16 @@ input.form-control {
   float: right;
 }
 
-.red-button {
-    background-color: red;
-    color: white;
+
+
+
+
+#table {
+    width: 90%;
+    margin: auto auto;
+
   }
 
-
-
-.sideNav {
-float: left;
-box-shadow: 5px 0 2px #575656;
-width: 300px;
-height: 1132px;
-
-
-}
-
-.breadcrumbNav {
-margin: 12% 10px;
-padding: 20px 30px; 
-top:0%;  
-transform: translateY(-1%);     
-}
-#breadcrumbpadding {
-
-width: 115px;  
-padding: 6px 0;
-}
-
-a {
-font-size: 16px;
-line-height: 20px;
-color: #2e2e2e;
-text-decoration: none;
-}
-
-.breadcrumbNav ul {
-
-list-style:none ;
-flex-direction: column;
-}
-.breadcrumb-item.active {
-
-
-border-bottom: 3px solid #4b4c4d;
-width: 115px;  
-
-}
-
-.anchorBorder{
-
-  
-margin:0 0%;
-}
-
-#hover:hover {
-font-weight: 700px;
-color: rgb(6, 85, 42);
-font-size: large;
-
-
-
-margin-bottom: 24px;
-margin-left: 10px;
-
-cursor: pointer;
-
-
-
-
-}
-
-
-
-
-
-    
-.contentContainerRight {
-   
-height: 1055px; 
-padding-left: 10px;
-}
 form {
     
     width: 600px;
@@ -238,23 +178,6 @@ form {
 }
 
 
-.toptitle {
-   
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 36px;
-    letter-spacing: 0.15em;
-    background: #ECE7E7;
-    width: 1110px;
-    margin:5% 6%;
-    padding-left: 50px;
-}
-h4 {
-    text-align: center;
-    font-weight: 400;
-    
-}
 
 .container {
     
@@ -281,16 +204,6 @@ h4 {
     margin: 1%;
 }
 
-.container .progress {
-    margin: 0 auto;
-    width: 800px;
-}
-.progress {
-    padding: 4px;
-    background:white;
-    border:1px solid gray;
-}
-
 label {
     display: inline-block;
     margin: 0 60px 8px;
@@ -304,8 +217,7 @@ label {
 }
 
 .todo{
-    background-color: red;
-    
+    background-color: red;  
 }
 .Assigned{
 
@@ -348,104 +260,6 @@ label {
 .Done:hover{
     color: green;
     background-color: white;
-
-}
-
-
-
-
-
-@media only screen and (max-width: 1200px) {
-    .sticky {
-        width: 100%;
-    }
-    body {
-        background-color: yellow;
-    }
-    
-    .contentContainerRight {
-       
-        margin-top:0%;
-        margin-left: 10%;
-        
-    
-    
-    }
-    form { 
-
-        width: 900px;
-    }
-    .toptitle {
-        border:1px solid red;
-        width: 700px;
-        margin:5% 17%;
-        
-        
-    }
-    label {
-        display: inline-block;
-        margin: 0 30px 0px;
-        padding: 5px 15px;
-       
-    
-    }
-
-    .middleTableDiv {
-
-        width:720px;
-        
-
-    }
-   
-
-}
-
-
-
-
-
-@media only screen and (max-width: 1200px) {
-    .sticky {
-        width: 100%;
-    }
-    body {
-        background-color: yellow;
-    }
-    
-    .contentContainerRight {
-       
-        margin-top:0%;
-        margin-left: 10%;
-        
-    
-    
-    }
-    form { 
-
-        width: 900px;
-    }
-    .toptitle {
-        border:1px solid red;
-        width: 700px;
-        margin:5% 17%;
-        
-        
-    }
-    label {
-        display: inline-block;
-        margin: 0 30px 0px;
-        padding: 5px 15px;
-       
-    
-    }
-
-    .middleTableDiv {
-
-        width:720px;
-        
-
-    }
-   
 
 }
 
