--- a/src/app/technician-table/technician-table.component.css
+++ b/src/app/technician-table/technician-table.component.css
@@ -42,3 +42,15 @@
     /* bottom: 0;
     width: 100%; */
   }
+  table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+ 
+  th, td {
+    padding: 20px;
+    
+  }
+  th {
+    text-align: left;
+  }
