--- a/src/app/technician-table/technician-table.component.html
+++ b/src/app/technician-table/technician-table.component.html
@@ -26,7 +26,7 @@
 <body>
 
   <div class="container2 d-flex justify-content-between ">
-      <div class="sideNav">
+      <!-- <div class="sideNav">
           <nav class="breadcrumbNav">
               <ul>
                   <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#" routerLink="/adminpage"  >View Logs</a></li>
@@ -35,19 +35,19 @@
                       
               </ul>
           </nav>
-      </div>
+      </div> -->
 
       <div class="tab-content ps-3 mt-5" id="myTabContent">
 
             
               <div class = "contentForm" >
                  
-                  <div class="departmenCategoryText">
+                  <!-- <div class="departmenCategoryText">
                       <h2></h2>
                       <h4></h4>
                       <h5></h5>
                   </div>
-                  
+                   -->
                   <div class="content card mt-4 p-4">
 
               
@@ -75,9 +75,9 @@
                               <td>{{ technician.availability }}</td>
                               <td>{{ technician.division_name }}</td>
                               <td>{{ technician.campus}}</td>
-                              
-
                               <td class="status">{{data.status}}</td>
+
+                             
                               <!-- <td><button type="button" class="logbtn" (click)="log($event,data.id)" [(ngModel)]="data.status">Log</button> </td> -->
                             </tr>
                           </tbody>
