css update for tech

--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -35,16 +35,16 @@
 <div class="container2 d-flex justify-content-between ">
     <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist">
 
-        <li class="nav-item" role="presentation" id="doing-tab1">
-            <a class="nav-link active colorRed" id="doing-tab" data-bs-toggle="tab" data-bs-target="#doing" type="text"
+        <li class="nav-item" role="presentation" id="doing-tab1"  routerLink="/trackrequest">
+            <a class="nav-link active colorRed" id="doing-tab"  type="text"
                 role="tab" aria-controls="doing" aria-selected="true">
-                <br><a><b>REQUESTS</b></a></a>
+               <br><a><b>REQUESTS</b></a></a>
         </li>
-        <li class="nav-item" role="presentation" id="doing-tab2">
+        <!-- <li class="nav-item" role="presentation" id="doing-tab2">
             <a class="nav-link colorAmber" id="done-tab" data-bs-toggle="tab" data-bs-target="#done" type="text"
                 role="tab" aria-controls="done" aria-selected="false"><br><a><b>VIEW PROGRESS</b></a></a>
 
-        </li>
+        </li> -->
 
         <li class="nav-item" role="presentation" id="doing-tab3">
             <a class="nav-link colorAmber" id="progress-tab" data-bs-toggle="tab" data-bs-target="#progress" type="text"
